feat(llmtraces): added ability to store and show llm traces
